# expense_tracker_mcp

./: mcp_client.py  mcp_server.py  pyproject.toml
